feat: a lot more cool stufff